// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HintText matches snapshot: enzyme.mount 1`] = `
<glamorous(span)>
  <span
    className="css-1k9f6xb"
  >
    example
  </span>
</glamorous(span)>
`;

exports[`HintText matches snapshot: enzyme.render 1`] = `
<span
  class="css-1k9f6xb"
>
  example
</span>
`;

exports[`HintText matches snapshot: enzyme.shallow 1`] = `
<span
  className="css-1k9f6xb"
>
  example
</span>
`;
